@startuml DiagramaUMLIphone
interface ReprodutorMusical {
  + tocar()
  + pausar()
  + selecionarMusica()
}

interface AparelhoTelefonico {
  + ligar()
  + atender()
  + iniciarCorreioVoz()
}

interface NavegadorInternet {
  + exibirPagina()
  + adicionarNovaAba()
  + atualizarPagina()
}

class IPhone {
  + tocar()
  + pausar()
  + selecionarMusica()
  + ligar()
  + atender()
  + iniciarCorreioVoz()
  + exibirPagina()
  + adicionarNovaAba()
  + atualizarPagina()

}
IPhone ..|> ReprodutorMusical
IPhone ..|> AparelhoTelefonico
IPhone ..|> NavegadorInternet
@enduml